2012-05-20  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/lexing.boot (getDecimalNumberToken): New.
	(getIntegerInRadix): Likewise.
	(getSpadIntegerToken): Likewise.
	(getToken): Use it.
	* interp/Makefile.in (bootlex.$(FASLEXT)): Remove rule.
	(OBJS): Do not include it.
	* interp/bootlex.lisp: Remove.

2012-05-20  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/spad-parser.boot (parseSexpr1): Simplify.
	(parseDara): Likewise.  Do not set LABLASOC.
	* interp/bootlex.lisp (PRINT-DEFUN): Remove.
	(TRANSLABEL): Likewise.
	(TRANSLABEL1): Likewise.
	* interp/preparse.lisp (LABLASOC): Likewise.

2012-05-20  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/vmlisp.lisp (SETANDFILE): Remove.
	(LAM,EVALANDFILEACTQ): Likewise.
	* interp/sys-utility.boot (PRINT-AND-EVAL-DEFUN): Likewise.
	* interp/slam.boot (reportFunctionCompilation): Tidy.
	* interp/lisp-backend.boot (evalAndPrintBackendDecl): New.
	* interp/c-util.boot (backendCompileSPADSLAM): Use it in lieu of
	SETANDFILE.
	(compAndDefine): Use evalAndPrintBackendDecl in lieu of
	PRINT-AND-EVAL-DEFUN.
	* interp/hypertex.boot: Clean up.
	* interp/nhyper.boot: Likewise.
	* interp/word.boot: Likewise.

2012-05-20  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/vmlisp.lisp (EVALANDFILEACTQ): Second argument is no
	longer optional.  Adjust callers.
	(LAM\,EVALANDFILEACTQ): Likewise.
	* interp/slam.boot (compQuietly): Use printBackendDecl.
	* interp/spad.lisp (SPAD): Likewise.
	* interp/sys-utility.boot (PRINT-AND-EVAL-DEFUN): Likewise.
	* interp/macros.lisp (SETANDFILE): Move to vmlisp.lisp.
	* interp/lisp-backend.boot (printBackendStmt): New.
	(evalAndPrintBackendStmt): Likewise.
	(printBackendDecl): Likewise.
	* interp/c-util.boot (registerFunctionReplacement): Use
	evalAndPrintBackendStmt.
	(registerRedexForm): Likewise.
	(proclaimCapsuleFunction): Use printBackendStmt.
	* interp/Makefile.in (lisp-backend.$(FASLEXT)): Require nlib.$(FASLEXT)

2012-05-20  Gabriel Dos Reis  <gdr@cs.tamu.edu>
