@@ -130,7 +130,7 @@
                (let ((parseout (|popStack1|)) )
                  (when parseout
                        (let ((|$OutputStream| out-stream))
-                         (S-PROCESS parseout))
+                         (|translateSpad| parseout))
                        (format out-stream "~&")))
                ;(IOClear in-stream out-stream)
                ))))
@@ -150,7 +150,7 @@
               (|addBinding| '|$DomainsInScope| proplist
                           (|addBinding| '|$Information| NIL
                                       (COPY-TREE |$InitialModemapFrame|))))
-        (RETURN (PROGN (S-PROCESS X) NIL))))
+        (RETURN (PROGN (|translateSpad| X) NIL))))
 
  ;; NIL needed below since END\_UNIT is not generated by current parser
 
@@ -275,25 +275,6 @@
 (defun \,max (x y) (max x y))
 (defun \,min (x y) (min x y))
 
-(defun S-PROCESS (X)
-  (let ((|$Index| 0)
-        (*print-pretty* t)
-        ($MACROASSOC ())
-        ($NEWSPAD T)
-        |$currentFunction|
-        |$topOp|
-        (|$semanticErrorStack| ())
-        (|$warningStack| ())
-        (|$returnMode| |$EmptyMode|)
-        (|$leaveLevelStack| ())
-        |$insideFunctorIfTrue| |$insideExpressionIfTrue|
-        |$insideCoerceInteractiveHardIfTrue| |$insideWhereIfTrue|
-        |$insideCategoryIfTrue| |$insideCapsuleFunctionIfTrue| |$form|
-        (|$e| |$EmptyEnvironment|)
-        (|$genSDVar| 0)
-        (|$previousTime| (TEMPUS-FUGIT)))
-    (|compileParseTree| X)))
-
 (MAKEPROP 'END_UNIT 'KEY T)
 
 (defun |process| (x)
@@ -301,7 +282,7 @@
          (SETQ DEBUGMODE 'NO)
          (SPAD_SYNTAX_ERROR)
          (if |$InteractiveMode| (|spadThrow|))
-         (S-PROCESS x))))
+         (|translateSpad| x))))
 
 (defun INITIALIZE () 
   (init-boot/spad-reader)
